--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mqtt": "^5.3.4",
+    "multer": "^2.0.2",
     "mysql2": "^3.6.5",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
